--- a/paper/3D视觉工坊最新论文汇总.md
+++ b/paper/3D视觉工坊最新论文汇总.md
@@ -12,6 +12,110 @@
 
 
 
+### 即将开源！单图像3D人体数字化！
+
+- 文章：[即将开源！单图像3D人体数字化！](https://mp.weixin.qq.com/s/o_uH3aB7aHS7FVZkQdrK5w)
+- 标题：Single-Image 3D Human Digitization with Shape-Guided Diffusion
+- 作者：Badour AlBahar等人
+- 机构：Kuwait University
+- 论文：[点击下载](https://pan.baidu.com/s/1B0Q5N6j8-bkDB72hl1aF1A)
+
+### CVPR 2023！F2-NeRF：几分钟内可合成任意视角的Nerf模型
+
+- 文章：[CVPR 2023！F2-NeRF：几分钟内可合成任意视角的Nerf模型](https://mp.weixin.qq.com/s/cvVXX3nc6mYwdKMkcZEq5Q)
+- 标题：F2-NeRF: Fast Neural Radiance Field Training with Free Camera Trajectories
+- 作者：Peng Wang，Yuan Liu等人
+- 机构：The University of Hong Kong;S-Lab, Nanyang Technological University等
+- 论文：[点击下载](https://pan.baidu.com/s/17j_4R89Uw0qK5sbQz8Cmcw)
+
+### 英伟达联合多伦多大学最新提出用于高效神经辐照场渲染的自适应外壳！
+
+- 文章：[英伟达联合多伦多大学最新提出用于高效神经辐照场渲染的自适应外壳！](https://mp.weixin.qq.com/s/DLfhauWnBQC3U7G2BDsL5Q)
+- 标题：Adaptive Shells for Efficient Neural Radiance Field Rendering
+- 作者：ZIAN WANG等人
+- 机构：NVIDIA, University of Toronto
+- 论文：[点击下载](https://pan.baidu.com/s/18TB4018zt8m0W14XurXOCA)
+
+### ICLR 2024最新开源！协同多视图和跨模式对比学习以增强3D表示：MIXCON3D
+
+- 文章：[ICLR 2024最新开源！协同多视图和跨模式对比学习以增强3D表示：MIXCON3D](https://mp.weixin.qq.com/s/zVUOenc3ZhboIocS9YPscQ)
+- 标题：MIXCON3D: SYNERGIZING MULTI-VIEW ANDCROSS-MODAL CONTRASTIVE LEARNING FOR EN-HANCING 3D REPRESENTATION
+- 作者：Yipeng Gao, et al.
+- 机构：Sun Yat-sen University, UC Santa Cruz.
+- 论文：[点击下载](https://pan.baidu.com/s/1DKS6F6VrCZ3nhgNHtltBug)
+
+### RAL2023 港大开源！基于分层激光雷达集束调整的一致性建图
+
+- 文章：[RAL2023 港大开源！基于分层激光雷达集束调整的一致性建图](https://mp.weixin.qq.com/s/UyLlQl7vUT845tF3EfWgcQ)
+- 标题：Large-Scale LiDAR Consistent Mapping using Hierarchical LiDAR Bundle Adjustment
+- 作者：Xiyuan Liu, Zheng Liu, Fanze Kong, and Fu Zhang
+- 机构：香港大学火星实验室
+- 论文：[点击下载](https://pan.baidu.com/s/1wx_e_Nx8dO-ljfPi-zkkDw)
+
+### CVPR 2023！自动Transdecoder神经坐标映射用于相机定位：NeuMap
+
+- 文章：[CVPR 2023！自动Transdecoder神经坐标映射用于相机定位：NeuMap](https://mp.weixin.qq.com/s/4gVKCnXFBqTcKp535hdD4g)
+- 标题：NeuMap: Neural Coordinate Mapping by Auto-Transdecoder for Camera Localization
+- 作者：Shitao Tang ;Sicong Tang ;Andrea Tagliasacchi等人
+- 机构：Simon Fraser University(西蒙弗雷泽大学)
+- 论文：[点击下载](https://pan.baidu.com/s/1Ie0Ov7Is7a-4vU19CKindw)
+
+### 爆火！提升92%！One-2-3-45++来了：快速将单图像转为3D模型！
+
+- 文章：[爆火！提升92%！One-2-3-45++来了：快速将单图像转为3D模型！](https://mp.weixin.qq.com/s/b4oeRW-29zBuSM2NXtanrA)
+- 标题：One-2-3-45++: Fast Single Image to 3D Objects with Consistent Multi-View Generation and 3D Diffusion
+- 作者：Minghua Liu, Ruoxi Shi等人
+- 机构：加州大学圣地亚哥分校、浙江大学等单位
+- 论文：[点击下载](https://pan.baidu.com/s/1pAcduaMasQCSmsIT-oA0dg)
+
+### 重大突破！斯坦福大学提出一种单阶段方法，在30秒内实现高质量文本到3D生成和单图像重建
+
+- 文章：[重大突破！斯坦福大学提出一种单阶段方法，在30秒内实现高质量文本到3D生成和单图像重建](https://mp.weixin.qq.com/s/vuj2xHgJ-_5GmY0uSaOUbg)
+- 标题：DMV3D: DENOISING MULTI-VIEW DIFFUSION USING 3D LARGE RECONSTRUCTION MODEL
+- 作者：Yinghao Xu等人
+- 机构：Adobe Research & Stanford University
+- 论文：[点击下载](https://pan.baidu.com/s/1CE3QH9Qq2GcGEUHVobw8Tg)
+
+### IROS\'23开源 \| nuScenes跟踪第一！无需学习的超强多目标跟踪！
+
+- 文章：[IROS'23开源 | nuScenes跟踪第一！无需学习的超强多目标跟踪！](https://mp.weixin.qq.com/s/w5XtME8sdyQL_zLRuc1L7Q)
+- 标题：Poly-MOT: A Polyhedral Framework For 3D Multi-Object Tracking
+- 作者：Xiaoyu Li, Tao Xie等人
+- 机构：哈尔滨工业大学
+- 论文：[点击下载](https://pan.baidu.com/s/1Hy-HR42rFafRkG_VBSHtnQ)
+
+### 升级NeRF！新加坡国立大学刚刚提出不到一秒从文本到3D生成：Instant3D
+
+- 文章：[升级NeRF！新加坡国立大学刚刚提出不到一秒从文本到3D生成：Instant3D](https://mp.weixin.qq.com/s/CZzccSOGuLuD05QEFGn8cg)
+- 标题：Instant3D: Instant Text-to-3D Generation
+- 作者：Ming Li, Pan Zhou等人
+- 机构：National University of Singapore 
+- 论文：[点击下载](https://pan.baidu.com/s/1D0cSYN7T1ph4T2DjayO5Sg)
+
+### CMU&斯坦福最新开源：零样本开放词汇跟踪！竟然还不需要训练？
+
+- 文章：[CMU&斯坦福最新开源：零样本开放词汇跟踪！竟然还不需要训练？](https://mp.weixin.qq.com/s/V24zCrbtyWfol9rSBXVlhQ)
+- 标题：Zero-Shot Open-Vocabulary Tracking with Large Pre-Trained Models
+- 作者：Wen-Hsuan Chu等人
+- 机构：卡内基梅隆大学、斯坦福大学、丰田研究院
+- 论文：[点击下载](https://pan.baidu.com/s/1QIAgGSe-r47oNgpD29msew)
+
+### 超神奇！Consolidated4D：从单目视频中生成4D动态对象
+
+- 文章：[超神奇！Consolidated4D：从单目视频中生成4D动态对象](https://mp.weixin.qq.com/s/KwQ1WSFA_xPJz2fSGRfnBw)
+- 标题：CONSISTENT4D: CONSISTENT 360° DYNAMIC OBJECT GENERATION FROM MONOCULAR VIDEO
+- 作者：Yanqin Jiang, Li Zhang等人
+- 机构：Nanjin University，Fudan University等
+- 论文：[点击下载](https://pan.baidu.com/s/1tXwn4tsVt1bHOd3YoEkiuQ)
+
+### ICCV2023最新！MemorySeg：激光雷达语义分割SOTA！
+
+- 文章：[ICCV2023最新！MemorySeg：激光雷达语义分割SOTA！](https://mp.weixin.qq.com/s/P-ZVj5T_P5DK3zJUNF2_oA)
+- 标题：MemorySeg: Online LiDAR Semantic Segmentation with a Latent Memory
+- 作者：Enxu Li,Sergio Casas等人
+- 机构：Waabi、University of Toronto
+- 论文：[点击下载](https://pan.baidu.com/s/16q7FnOj8w4Y39YUXqs9dCQ)
+
 ### 多伦多大学最新提出在现实感传感器模拟中的野外物体重建
 
 - 文章：[多伦多大学最新提出在现实感传感器模拟中的野外物体重建](https://mp.weixin.qq.com/s/DT56HjKZHkPw5RZLGjf6NQ)
