--- a/paper/3D视觉工坊最新论文汇总.md
+++ b/paper/3D视觉工坊最新论文汇总.md
@@ -12,6 +12,22 @@
 
 
 
+### NGEL-SLAM：浙大、华为最新SOTA！又快又稳！
+
+- 文章：[NGEL-SLAM：浙大、华为最新SOTA！又快又稳！](https://mp.weixin.qq.com/s/ma83EhC4lZzRsjuwbKGMvw)
+- 标题：NGEL-SLAM: Neural Implicit Representation-based Global Consistent Low-Latency SLAM System
+- 作者：Yunxuan Mao等人
+- 机构：浙江大学、华为
+- 论文：[点击下载](https://pan.baidu.com/s/1jdCFZVvh_ZtutPUqC2itXQ)
+
+### 慕尼黑工业大学最新提出提出多机器人系统的协作SLAM
+
+- 文章：[慕尼黑工业大学最新提出提出多机器人系统的协作SLAM](https://mp.weixin.qq.com/s/9k_2h1ihh55JDfp7RpGfgw)
+- 标题：CoVOR-SLAM: Cooperative SLAM using Visual Odometry and Ranges for Multi-Robot Systems
+- 作者：Young-Hee Lee, Chen Zhu等人
+- 机构：慕尼黑工业大学
+- 论文：[点击下载](https://pan.baidu.com/s/1PWRfB3tUokWnBb9swrgjbQ)
+
 ### 即将开源！单图像3D人体数字化！
 
 - 文章：[即将开源！单图像3D人体数字化！](https://mp.weixin.qq.com/s/o_uH3aB7aHS7FVZkQdrK5w)
