--- a/paper/三维重建.md
+++ b/paper/三维重建.md
@@ -1,18 +1,12 @@
 ## 三维重建
 
-- 题目：[三维重建系统教程！涉及结构光三维重建、视觉三维重建、点云处理等~](https://zhuanlan.zhihu.com/p/415888087)
-
-- 题目：[ICRA 2022 | 基于多模态变分自编码器的任意时刻三维物体重建](https://zhuanlan.zhihu.com/p/483906051)
-- 题目：[CVPR2021| 基于自监督学习的多视图立体匹配](https://zhuanlan.zhihu.com/p/509191956)
-
-- 题目：[基于多视图几何方式的三维重建](https://mp.weixin.qq.com/s/CgR787PGpaswfnm2bzv-NQ),作者：工坊
-
-- 题目：[彻底搞透视觉三维重建：原理剖析、代码讲解、及优化改进](https://mp.weixin.qq.com/s/aVPxhwnoA5g-QDZ06d88tg),作者：工坊
-
-- 题目：[CVPR 2021 | pixelNeRF：一种基于NeRF的多视图三维重建网络](https://mp.weixin.qq.com/s/_BIJEe099JsYZpYX109Xbg),作者：Longway
-
-- 题目：[从计算机视觉(slam)和摄影测量两个维度进行BA算法原理推导](https://mp.weixin.qq.com/s/BXNTdSUGO2BOXbZ5yVawVw)，作者：李城
-
-- 题目：[多视图立体匹配MVSNet网络解析：保姆级教程](https://mp.weixin.qq.com/s/iCkHZUVTuPX7kHmoiacq-w),作者：Todd-Qi
-- 题目：[多视图几何中5点法非线性求解计算本质矩阵](https://mp.weixin.qq.com/s/_Bqd-Vohe7fD7S5OOmoEfw)，作者：李城
-- 
+- 标题：[三维重建系统教程！涉及结构光三维重建、视觉三维重建、点云处理等~](https://mp.weixin.qq.com/s/wx0qByMaM8qLOcoSlibCYA)
+- 标题：[CVPR2021|用于立体匹配的可学习双边网格](https://mp.weixin.qq.com/s/ppMkEOhnaONfyi3GG1G59w)
+- 标题：[基于多视图几何方式的三维重建](https://mp.weixin.qq.com/s/CgR787PGpaswfnm2bzv-NQ) 作者：工坊
+- 标题：[彻底搞透视觉三维重建：原理剖析、代码讲解、及优化改进](https://mp.weixin.qq.com/s/aVPxhwnoA5g-QDZ06d88tg) 作者：工坊
+- 标题：[CVPR 2021 | pixelNeRF：一种基于NeRF的多视图三维重建网络](https://mp.weixin.qq.com/s/_BIJEe099JsYZpYX109Xbg) 作者:Longway
+- 标题：[从计算机视觉(slam)和摄影测量两个维度进行BA算法原理推导](https://mp.weixin.qq.com/s/BXNTdSUGO2BOXbZ5yVawVw) 作者:李城
+- 标题：[多视图立体匹配MVSNet网络解析：保姆级教程](https://mp.weixin.qq.com/s/iCkHZUVTuPX7kHmoiacq-w) 作者:Todd-Qi
+- 标题：[多视图几何中5点法非线性求解计算本质矩阵](https://mp.weixin.qq.com/s/_Bqd-Vohe7fD7S5OOmoEfw) 作者:李城
+- 标题：[ICRA 2022 | 基于多模态变分自编码器的任意时刻三维物体重建](###)
+- 标题：[CVPR2021| 基于自监督学习的多视图立体匹配](###)
