--- a/paper/自动驾驶.md
+++ b/paper/自动驾驶.md
@@ -91,7 +91,7 @@
 - 标题：[通过历史对象预测对多视图3D目标检测器进行时间增强训练](https://arxiv.org/pdf/2304.00967.pdf)
 - 标题：[VIMI：用于基于摄像头的3D目标检测的车辆基础设施多视图中间融合](https://arxiv.org/pdf/2303.10975.pdf)
 - 标题：[Object as Query: 为任何2D对象检测器配备3D检测能力](https://arxiv.org/pdf/2301.02364.pdf)
-- 标题：[VoxelFormer：基于双视图注意力的鸟瞰特征生成，用于多视图3D目标检测]https://github.com/Lizhuoling/VoxelFormer-public()
+- 标题：[VoxelFormer：基于双视图注意力的鸟瞰特征生成，用于多视图3D目标检测](https://github.com/Lizhuoling/VoxelFormer-public)
 - 标题：[TiG-BEV：通过目标内部几何学习进行多视图BEV 3D目标检测](https://arxiv.org/pdf/2212.13979.pdf)
 - 标题：[CrossDTR：用于 3D 对象检测的交叉视图和深度引导Transformer](https://arxiv.org/pdf/2209.13507.pdf)
 - 标题：[SOLOFusion：时间会证明一切：时态多视图3D目标检测的新前景和基线](https://arxiv.org/abs/2210.02443)
