--- a/paper/3D视觉工坊最新论文汇总.md
+++ b/paper/3D视觉工坊最新论文汇总.md
@@ -12,6 +12,32 @@
 
 
 
+
+
+### 快速提取精确且可编辑的3D网格：一种基于Gaussian Splatting的方法
+
+- 文章：[快速提取精确且可编辑的3D网格：一种基于Gaussian Splatting的方法](https://mp.weixin.qq.com/s/z5Gw9hmQrZPNbZ2GjtSkwg)
+- 标题：SuGaR: Surface-Aligned Gaussian Splatting for Efficient 3D Mesh Reconstruction and High-Quality Mesh Rendering
+- 作者：Antoine Guedon等人
+- 机构：LIGM等单位
+- 论文：[点击下载](https://pan.baidu.com/s/1bE7kw53d3O1jMXwuiLL16A)
+
+### TouchSDF: 结合视觉与触觉的3D形状重建的新方法！
+
+- 文章：[TouchSDF: 结合视觉与触觉的3D形状重建的新方法！](https://mp.weixin.qq.com/s/zdh8rivB_pIyDnOKvJY0-Q)
+- 标题：TouchSDF: A DeepSDF Approach for 3D Shape Reconstruction using Vision-Based Tactile Sensing
+- 作者：Mauro Comi等人
+- 机构：University of Bristol等单位
+- 论文：[点击下载](https://pan.baidu.com/s/1SUfNt8X-43yj-mxEk5UxTQ)
+
+### NeurlPS\'23 \| 第一个协作神经隐式SLAM！（浙大NICE-SLAM团队最新力作）
+
+- 文章：[NeurlPS\'23 \| 第一个协作神经隐式SLAM！（浙大NICE-SLAM团队最新力作）](https://mp.weixin.qq.com/s/0uo8xjO8G0Rvoa7GJ8TF1Q)
+- 标题：CP-SLAM: Collaborative Neural Point-based SLAM System
+- 作者：Jiarui Hu, Mao Mao,等人
+- 机构：浙江大学、华为
+- 论文：[点击下载](https://pan.baidu.com/s/1BQ2_UpRxKh5VFaHf_KFNUw)
+
 ### NGEL-SLAM：浙大、华为最新SOTA！又快又稳！
 
 - 文章：[NGEL-SLAM：浙大、华为最新SOTA！又快又稳！](https://mp.weixin.qq.com/s/ma83EhC4lZzRsjuwbKGMvw)
