--- a/paper/工业3D视觉.md
+++ b/paper/工业3D视觉.md
@@ -4,8 +4,26 @@
 
 ### 相机标定
 
+- 标题：[CalibFormer：基于变压器的自动激光雷达相机 校准网络](https://arxiv.org/abs/2311.15241)
+- 标题：[迈向全球范围内的交通摄像机 校准](https://arxiv.org/abs/2311.04243)
+- 标题：[MirrorCalib：利用人体姿势信息进行基于镜子的虚拟相机 校准](https://arxiv.org/abs/2311.02791)
+- 标题：[通过 GNN 的单应性估计进行 自动相机 校准](https://arxiv.org/abs/2311.02598)
+- 标题：[P2O-Calib：使用点对空间遮挡关系进行 相机-LiDAR校准](https://arxiv.org/abs/2311.02413)
+- 标题：[用于将事件数据与 RGB 图像融合的 多模态相机设置的定量评估](https://arxiv.org/abs/2311.01881)
+- 标题：[一种应用于水下里程计的 在线自校准折射相机模型](https://arxiv.org/abs/2310.16658)
+- 标题：[宽基线立体事件相机的同步和校准](https://arxiv.org/abs/2309.16990)
+- 标题：[eWand：用于基于宽基线帧和基于事件的相机系统的校准框架](https://arxiv.org/abs/2309.12685)
+- 标题：[使用平面约束束调整在无目标环境中 联合内在和外在 LiDAR相机校准](https://arxiv.org/abs/2308.12629)
+- 标题：[使用 IceCube Upgrade相机系统 进行 IceCube Upgrade校准 的新模拟框架](https://arxiv.org/abs/2308.06247)
+- 标题：[3D 雷达和相机联合标定：一种灵活、准确的基于目标的外在标定方法](https://arxiv.org/abs/2307.15264)
+- 标题：[从单个成像椭球体进行相机标定](https://arxiv.org/abs/2307.00689)
+- 标题：[E-Calib：用于事件摄像机的 快速、稳健且准确的校准工具箱](https://arxiv.org/abs/2306.09078)
+- 标题：[自动驾驶汽车道路场景 环视摄像头 自动标定方法](https://arxiv.org/abs/2305.16840)
+- 标题：[一种快速鲁棒的相机-定位系统 IMU在线标定方法](https://arxiv.org/abs/2305.08247)
+- 标题：[EasyHeC：通过可微分渲染和空间探索进行 准确、自动的手眼校准](https://arxiv.org/abs/2305.01191)
+- 标题：[基于球间一致性的相机-投影仪对标定方法](https://arxiv.org/abs/2304.14485)
+- 标题：[用于相机标定及其他方面的深度学习：一项调查](https://arxiv.org/abs/2303.10559)
 - 标题：[基于圆形标定点的相机几何参数的标定](###)
-
 - 标题：[叉车机器人托盘定位技术：近期进展回顾](###)
 
 ### 三维点云
@@ -31,6 +49,27 @@
 - 标题：[如何更高效、系统地学习三维点云原理与方法？](https://mp.weixin.qq.com/s/lmbOT6km5WYDu1G--NxfXA)，作者：工坊
 - 标题：[视频+课件| PointDSC：基于特征匹配的点云配准方法（CVPR2021）](https://mp.weixin.qq.com/s/CHj6fxQSQTVoDIs4VxY6ag)，作者：工坊
 - 标题：[一文详解点云库PCL](https://mp.weixin.qq.com/s/DrSgeQFmnwemRhL8XMTnFw)，作者：天啦噜
+- 标题：[Text2Loc：自然语言的 3D 点 云定位](https://arxiv.org/abs/2311.15977)
+- 标题：[OneFormer3D：用于统一点 云分割 的一个变压器](https://arxiv.org/abs/2311.14405)
+- 标题：[GRJointNET： 3D不完整点 云 上的协同补全和零件分割](https://arxiv.org/abs/2311.13997)
+- 标题：[用于临界采样3D 点 云属性压缩 的学习非线性预测器](https://arxiv.org/abs/2311.13539)
+- 标题：[体积3D 点 云属性压缩：用于预测的学习多项式双边滤波器](https://arxiv.org/abs/2311.13533)
+- 标题：[3D 点 云分类和分割 的测试时间增强](https://arxiv.org/abs/2311.13152)
+- 标题：[通过3D到多视图掩模自动编码器的 点云自监督学习](https://arxiv.org/abs/2311.10887)
+- 标题：[大几何和时间变化下 3D 点 云配准 的时空基准](https://arxiv.org/abs/2311.09346)
+- 标题：[基于学习的点 云分类 双调和增强](https://arxiv.org/abs/2311.06070)
+- 标题：[3D -QAE： 3D 点 云的完全量子自动编码](https://arxiv.org/abs/2311.05604)
+- 标题：[用于可变形对象跟踪的 快速点云到网格重建](https://arxiv.org/abs/2311.02749)
+- 标题：[基于深度学习的3D 点 云分类：系统综述与展望](https://arxiv.org/abs/2311.02608)
+- 标题：[从 LiDAR点 云实现无监督物体检测](https://arxiv.org/abs/2311.02007)
+- 标题：[利用大规模预训练视觉基础模型进行标签高效的3D 点 云分割](https://arxiv.org/abs/2311.01989)
+- 标题：[3D -BBS：使用分支定界算法 进行3D 点 云扫描匹配的全局定位](https://arxiv.org/abs/2310.10023)
+- 标题：[PointHR：探索3D 点 云分割 的高分辨率架构](https://arxiv.org/abs/2310.07743)
+- 标题：[PolarNet：用于语言引导机器人操作的 3D 点 云](https://arxiv.org/abs/2309.15596)
+- 标题：[3D 点 云 的边缘感知学习](https://arxiv.org/abs/2309.13472)
+- 标题：[通过位置嵌入进行 稳健的点 云处理](https://arxiv.org/abs/2309.00339)
+- 标题：[使用 CLIP 模型进行 细粒度文本和图像引导点 云补全](https://arxiv.org/abs/2308.08754)
+- 标题：[3DHacker：用于硬标签3D 点 云攻击 的基于频谱的决策边界生成](https://arxiv.org/abs/2308.07546)
 
 ### 结构光
 
@@ -44,11 +83,42 @@
 ### 6D位姿估计
 
 - 标题：[工业应用中基于三维模型的6D目标检测综述](###)
-
 - 标题：[CVPR 2022 | OVE6D：用于基于深度的6D对象姿势估计的对象视点编码](###)
+- 标题：[LanPose：用于机器人装配的 语言指导的6D物体姿态估计](https://arxiv.org/abs/2310.13819)
+- 标题：[ViHOPE：具有形状完成功能的 Visuotactile 手持物体6D姿势估计](https://arxiv.org/abs/2309.05662)
+- 标题：[用于手部物体本体 感受6D姿势估计的 分层图神经网络](https://arxiv.org/abs/2306.15858)
+- 标题：[用于可靠6D物体姿态估计 的多视图关键点](https://arxiv.org/abs/2303.16833)
+- 标题：[用于6D物体姿态估计 的刚度感知检测](https://arxiv.org/abs/2303.12396)
+- 标题：[毫米波 MIMO 系统中 用于6D姿态估计的 投影几何视图](https://arxiv.org/abs/2302.00227)
+- 标题：[单目 RGB 图像的 类别级6D物体姿态估计的物体级深度重建](https://arxiv.org/abs/2204.01586)
+- 标题：[用于深度单目6D物体姿态估计的 对抗样本](https://arxiv.org/abs/2203.00302)
+- 标题：[3D 扫描中 基于深度学习的6D Bin 姿态估计](https://arxiv.org/abs/2112.09598)
+- 标题：[从几何合成中学习立体视觉以进行6D物体姿态估计](https://arxiv.org/abs/2109.12266)
+- 标题：[6D人体姿势估计 的方向关键点](https://arxiv.org/abs/2009.04930)
+- 标题：[MaskedFusion：基于掩模的6D物体姿态估计](https://arxiv.org/abs/1911.07771)
+- 标题：[Object-RPE：利用卷积神经网络对仓库机器人进行 密集 3D 重建和姿态估计](https://arxiv.org/abs/1908.08601)
+- 标题：[实例级和类别级6D物体姿态估计](https://arxiv.org/abs/1903.04229)
+- 标题：[无需 PnP 的 6D物体姿态估计](https://arxiv.org/abs/1902.01728)
+- 标题：[iPose：部分遮挡物体的 实例感知6D姿势估计](https://arxiv.org/abs/1712.01924)
+- 标题：[MPG - 6 DOF 姿势不确定性的推理框架](https://arxiv.org/abs/1707.01941)
+- 标题：[6D物体姿态：回顾和多模态分析](https://arxiv.org/abs/1706.03285)
+- 标题：[基于学习的可变尺寸部分提取架构，用于深度 6D物体姿态恢复](https://arxiv.org/pdf/1701.02166)
 
 
 
 ### 缺陷检测
 
 - 标题：[重磅！国内首个缺陷检测教程：理论、源码与实战](https://mp.weixin.qq.com/s/21DfyiHDQ6zY9IlkT5Z8QA)
+- 标题：[学习图-用于缺陷定位 的纹理表面图像的傅里叶谱](https://arxiv.org/abs/2311.15082)
+- 标题：[基于单图像的深度学习，用于精确的原子缺陷识别](https://arxiv.org/abs/2311.14936)
+- 标题：[使用集成 CNN 的 可重复使用的人工智能铁路缺陷 检测系统](https://arxiv.org/abs/2311.14824)
+- 标题：[NAS-ASDet：一种使用神经架构搜索的 表面缺陷 检测网络的自适应设计方法](https://arxiv.org/abs/2311.10952)
+- 标题：[SCL-VI：用于工业缺陷 视觉检查的自监督情境学习](https://arxiv.org/abs/2311.06504)
+- 标题：[DeepInspect：面向制造业的 人工智能缺陷 检测](https://arxiv.org/abs/2311.03725)
+- 标题：[基于视觉缺陷混淆的自监督异常检测策略](https://arxiv.org/abs/2310.04010)
+- 标题：[应用互易性促进波场可视化和缺陷 检测](https://arxiv.org/abs/2309.15198)
+- 标题：[Real3D-AD：点云异常检测 数据集](https://arxiv.org/abs/2309.13226)
+- 标题：[用于表面缺陷的轻量级显着性检测的 全局上下文聚合网络](https://arxiv.org/abs/2309.12641)
+- 标题：[FAIR：用于工业视觉异常检测 的频率感知图像恢复](https://arxiv.org/abs/2309.07068)
+- 标题：[利用视觉和触觉感知大型部件的 机器人缺陷检测](https://arxiv.org/abs/2309.04590)
+- 标题：[TFR：使用简单自动编码器的正常重构模板进行傅里叶变换的 纹理缺陷 检测](https://arxiv.org/abs/2307.04574)
