--- a/paper/三维重建.md
+++ b/paper/三维重建.md
@@ -2,11 +2,91 @@
 
 - 标题：[三维重建系统教程！涉及结构光三维重建、视觉三维重建、点云处理等~](https://mp.weixin.qq.com/s/wx0qByMaM8qLOcoSlibCYA)
 - 标题：[CVPR2021|用于立体匹配的可学习双边网格](https://mp.weixin.qq.com/s/ppMkEOhnaONfyi3GG1G59w)
-- 标题：[基于多视图几何方式的三维重建](https://mp.weixin.qq.com/s/CgR787PGpaswfnm2bzv-NQ) 作者：工坊
-- 标题：[彻底搞透视觉三维重建：原理剖析、代码讲解、及优化改进](https://mp.weixin.qq.com/s/aVPxhwnoA5g-QDZ06d88tg) 作者：工坊
-- 标题：[CVPR 2021 | pixelNeRF：一种基于NeRF的多视图三维重建网络](https://mp.weixin.qq.com/s/_BIJEe099JsYZpYX109Xbg) 作者:Longway
-- 标题：[从计算机视觉(slam)和摄影测量两个维度进行BA算法原理推导](https://mp.weixin.qq.com/s/BXNTdSUGO2BOXbZ5yVawVw) 作者:李城
-- 标题：[多视图立体匹配MVSNet网络解析：保姆级教程](https://mp.weixin.qq.com/s/iCkHZUVTuPX7kHmoiacq-w) 作者:Todd-Qi
-- 标题：[多视图几何中5点法非线性求解计算本质矩阵](https://mp.weixin.qq.com/s/_Bqd-Vohe7fD7S5OOmoEfw) 作者:李城
+- 标题：[基于多视图几何方式的三维重建](https://mp.weixin.qq.com/s/CgR787PGpaswfnm2bzv-NQ) 
+- 标题：[彻底搞透视觉三维重建：原理剖析、代码讲解、及优化改进](https://mp.weixin.qq.com/s/aVPxhwnoA5g-QDZ06d88tg) 
+- 标题：[CVPR 2021 | pixelNeRF：一种基于NeRF的多视图三维重建网络](https://mp.weixin.qq.com/s/_BIJEe099JsYZpYX109Xbg) 
+- 标题：[从计算机视觉(slam)和摄影测量两个维度进行BA算法原理推导](https://mp.weixin.qq.com/s/BXNTdSUGO2BOXbZ5yVawVw) 
+- 标题：[多视图立体匹配MVSNet网络解析：保姆级教程](https://mp.weixin.qq.com/s/iCkHZUVTuPX7kHmoiacq-w) 
+- 标题：[多视图几何中5点法非线性求解计算本质矩阵](https://mp.weixin.qq.com/s/_Bqd-Vohe7fD7S5OOmoEfw) 
 - 标题：[ICRA 2022 | 基于多模态变分自编码器的任意时刻三维物体重建](###)
 - 标题：[CVPR2021| 基于自监督学习的多视图立体匹配](###)
+- 标题：[通过法线贴图对着装人体 进行弱监督3D 重建](https://arxiv.org/abs/2311.16042)
+- 标题：[CrowdRec：从单色图像 重建3D人群](https://arxiv.org/abs/2310.06332)
+- 标题：[通过空间变化表达条件神经辐射场 重建 高保真3D头部头像](https://arxiv.org/abs/2310.06275)
+- 标题：[用于稀疏视图 神经表面重建的 几何引导射线增强](https://arxiv.org/abs/2310.05483)
+- 标题：[从带有遮挡的 RGB-D 数据 重建3D人体姿势](https://arxiv.org/abs/2310.01228)
+- 标题：[嘈杂农业环境中的3D 重建：视图规划的贝叶斯优化视角](https://arxiv.org/abs/2310.00145)
+- 标题：[MV-DeepSDF：使用多扫描点云进行隐式建模，用于自动驾驶中的 3D车辆重建](https://arxiv.org/abs/2309.16715)
+- 标题：[SGRec3D：通过对象级场景重建 进行自监督3D场景图学习](https://arxiv.org/abs/2309.15702)
+- 标题：[使用场景先验的可泛化神经场的 3D重建](https://arxiv.org/abs/2309.15164)
+- 标题：[仅从 2D 姿势 无监督重建 3D人体姿势交互](https://arxiv.org/abs/2309.14865)
+- 标题：[NeRRF：具有神经折射反射场的透明和镜面物体的 3D 重建和视图合成](https://arxiv.org/abs/2309.13039)
+- 标题：[3D人脸重建：取证之路](https://arxiv.org/abs/2309.11357)
+- 标题：[SHOWMe：与对象无关的手部对象3D 重建的基准测试](https://arxiv.org/abs/2309.10748)
+- 标题：[360使用空间雕刻外画从单个图像 重建](https://arxiv.org/abs/2309.10279)
+- 标题：[使用更新的 CROBAR 方法对太阳日冕物理 进行 高保真3D 重建](https://arxiv.org/abs/2309.08053)
+- 标题：[HandNeRF：学习从单个 RGB 图像 重建手部-物体交互场景](https://arxiv.org/abs/2309.07891)
+- 标题：[利用多个先验进行神经3D室内重建](https://arxiv.org/abs/2309.07021)
+- 标题：[SADIR：用于3D图像重建的 形状感知扩散模型](https://arxiv.org/abs/2309.03335)
+- 标题：[GO-SLAM：全局优化，实现一致的3D即时重建](https://arxiv.org/abs/2309.02436)
+- 标题：[从多个视图 迭代超二次重构3D对象](https://arxiv.org/abs/2309.02102)
+- 标题：[深度可变形模型：学习具有零件一致性的3D形状抽象](https://arxiv.org/abs/2309.01035)
+- 标题：[使用单目事件相机进行密 集体素3D 重建](https://arxiv.org/abs/2309.00385)
+- 标题：[Drone-NeRF：基于 NeRF 的高效3D场景重建，用于大规模无人机勘测](https://arxiv.org/abs/2308.15733)
+- 标题：[NSF：单眼深度人体建模的神经表面场](https://arxiv.org/abs/2308.14847)
+- 标题：[R3D3：多摄像机动态场景的 密集3D 重建](https://arxiv.org/abs/2308.14713)
+- 标题：[Sparse3D：从稀疏视图中 提取多视图一致扩散以进行对象重建](https://arxiv.org/abs/2308.14078)
+- 标题：[基于多平面去噪扩散的维数扩展，用于通过协调采样对微观结构 进行 2D 到3D 重建](https://arxiv.org/abs/2308.14035)
+- 标题：[HiFiHR：通过高保真纹理增强单个图像的 3D手部重建](https://arxiv.org/abs/2308.13628)
+- 标题：[DPF-Net：结合可变形基元场中的显式形状先验，实现3D对象 的无监督结构重建](https://arxiv.org/abs/2308.13225)
+- 标题：[GridPull：实现从3D点云 学习隐式表示的可扩展性](https://arxiv.org/abs/2308.13175)
+- 标题：[ScanNet++： 3D室内场景 的高保真数据集](https://arxiv.org/abs/2308.11417)
+- 标题：[使用单目视频进行通用 非刚性3D 重建的根姿势分解](https://arxiv.org/abs/2308.10089)
+- 标题：[用于恒星形成区域尘埃密度和温度的 3D 重建 的深度学习方法](https://arxiv.org/abs/2308.09657)
+- 标题：[O^2-Recon：使用预训练的2D扩散模型完成场景中被遮挡物体的 3D 重建](https://arxiv.org/abs/2308.09591)
+- 标题：[MonoNeRD：用于单目3D物体检测 的类 NeRF 表示](https://arxiv.org/abs/2308.09421)
+- 标题：[用于持续3D 重建的 变分分布先验和显着图重放的融合](https://arxiv.org/abs/2308.08812)
+- 标题：[用于多视图3D 重建的 远程分组变压器](https://arxiv.org/abs/2308.08724)
+- 标题：[DDF-HO：通过条件定向距离场 进行手持物体重建](https://arxiv.org/abs/2308.08231)
+- 标题：[CCD-3DR：单图像3D 重建的扩散一致调节](https://arxiv.org/abs/2308.07837)
+- 标题：[基于FLAME的多视角3D人脸重建](https://arxiv.org/abs/2308.07551)
+- 标题：[PlankAssembly：使用学习形状程序从三个正交视图进行 稳健的3D 重建](https://arxiv.org/abs/2308.05744)
+- 标题：[FrozenRecon：使用冻结深度模型进行 无姿势3D场景重建](https://arxiv.org/abs/2308.05733)
+- 标题：[使用扩散模型进行 无参考各向同性3D EM重建](https://arxiv.org/abs/2308.01594)
+- 标题：[目3D人体重建 的身体知识和不确定性建模](https://arxiv.org/abs/2308.00799)
+- 标题：[SimCol3D——结肠镜检查挑战期间的 3D 重建](https://arxiv.org/abs/2307.11261)
+- 标题：[用于激光雷达视图合成和3D 重建的瞬态神经辐射场](https://arxiv.org/abs/2307.09555)
+- 标题：[基于运动增量结构的球面图像 3D重建](https://arxiv.org/abs/2306.12770)
+- 标题：[NeuS-PIR：使用预集成渲染学习可重新光照神经表面](https://arxiv.org/abs/2306.07632)
+- 标题：[基于 GPU 的高效 h 自适应框架，通过线性树进行通量重建方法](https://arxiv.org/abs/2306.06744)
+- 标题：[NERFBK：基于 NERF 的3D 重建 的高质量基准](https://arxiv.org/abs/2306.06300)
+- 标题：[DiViNeT：通过神经模板正则化从不同视图进行 3D 重建](https://arxiv.org/abs/2306.04699)
+- 标题：[使用更快的傅立叶卷积神经网络进行加速 MR 扫描的图像重建](https://arxiv.org/abs/2306.02886)
+- 标题：[根据 2D 平面图 自动重建语义3D模型](https://arxiv.org/abs/2306.01642)
+- 标题：[BUOL：具有占用感知提升功能的自下而上框架，用于从单个图像 重建全景3D场景](https://arxiv.org/abs/2306.00965)
+- 标题：[使用校准的局部几何驱动距离度量 释放3D点云建模的潜力](https://arxiv.org/abs/2306.00552)
+- 标题：[DiffRoom：基于扩散的高质量3D房间重建和生成（占用优先）](https://arxiv.org/abs/2306.00519)
+- 标题：[神经核表面重建](https://arxiv.org/abs/2305.19590)
+- 标题：[UniScene：通过3D场景重建 进行多相机统一预训练](https://arxiv.org/abs/2305.18829)
+- 标题：[T2TD：基于先验知识指导的文本3D生成模型](https://arxiv.org/abs/2305.15753)
+- 标题：[REC-MV：从单目视频重建 3D动态布料](https://arxiv.org/abs/2305.14236)
+- 标题：[从2DGAN 数据 渐进学习3D 重建网络](https://arxiv.org/abs/2305.11102)
+- 标题：[实时同时多目标3D形状重建、6DoF 姿态估计和密集抓取预测](https://arxiv.org/abs/2305.09510)
+- 标题：[AutoRecon：自动3D对象发现和重建](https://arxiv.org/abs/2305.08810)
+- 标题：[BundleRecon：基于射线束的3D神经重建](https://arxiv.org/abs/2305.07342)
+- 标题：[Scan2LoD3：使用光线投射和贝叶斯网络在 LoD3重建语义3D建筑模型](https://arxiv.org/abs/2305.06314)
+- 标题：[NeRSemble：人体头部的 多视角辐射场重建](https://arxiv.org/abs/2305.03027)
+- 标题：[通过热反射进行3D人体重建](https://arxiv.org/abs/2305.01652)
+- 标题：[NSLF-OL：神经表面光场在线学习以及实时增量3D 重建](https://arxiv.org/abs/2305.00282)
+- 标题：[CVRecon：重新思考用于神经重建的3D几何特征学习](https://arxiv.org/abs/2304.14633)
+- 标题：[UHRNet：一种基于深度学习的单一条纹图案 精确3D 重建方法](https://arxiv.org/abs/2304.14503)
+- 标题：[Instant- 3D ：针对设备上 AR/VR 3D 重建的即时神经辐射现场训练](https://arxiv.org/abs/2304.12467)
+- 标题：[基于单张图像的 无监督风格显式3D人脸重建](https://arxiv.org/abs/2304.12455)
+- 标题：[3维密集重建：算法和数据集回顾](https://arxiv.org/abs/2304.09371)
+- 标题：[MoDA：根据休闲视频 对可变形3D对象进行建模](https://arxiv.org/abs/2304.08279)
+- 标题：[使用增量区域生长 在3D点云中进行 特征辅助交互式几何重建](https://arxiv.org/abs/2304.05109)
+- 标题：[隐式3D 重建 的采样策略分析](https://arxiv.org/abs/2304.03999)
+- 标题：[多视图3D 重建 的端到端延迟优化](https://arxiv.org/abs/2304.01488)
+
+
+
