--- a/paper/自动驾驶.md
+++ b/paper/自动驾驶.md
@@ -1,13 +1,27 @@
 # 自动驾驶
 
+**目录**
+
+[**3D目标检测**](#3D目标检测)
+
+[**感知预测规划**](#感知预测规划)
+
+[**追踪**](#追踪)
+
+[**定位**](#定位)
+
+[**Occupancy预测**](#Occupancy预测)
+
 ## 3D目标检测
+
+<a name="3D目标检测"></a> 
 
 ### 雷达 激光雷达
 
 - 标题：[RaLiBEV：用于无锚箱物体检测系统的雷达和LiDAR BEV融合学习](https://arxiv.org/pdf/2211.06108.pdf)
 - 标题：[Bi-LRFusion：用于 3D 动态物体检测的双向 LiDAR-雷达融合](https://arxiv.org/pdf/2306.01438.pdf)
-- 标题：[MaskBEV：鸟瞰图 3D 点云的联合对象检测和足迹完成](https://arxiv.org/pdf/2307.01864.pdf)
-- 标题：[LXL：LiDAR 排除了采用 4D 成像雷达和相机融合的精益 3D 物体检测](https://arxiv.org/pdf/2307.00724.pdf)
+- 标题：[MaskBEV：鸟瞰图3D点云的联合对象检测和足迹完成](https://arxiv.org/pdf/2307.01864.pdf)
+- 标题：[LXL：LiDAR 排除了采用4D成像雷达和相机融合的精益 3D 物体检测](https://arxiv.org/pdf/2307.00724.pdf)
 
 ### 雷达摄像头
 
@@ -51,12 +65,6 @@
 
 ### 多目
 
-- 标题：[使用动态图进行3D目标检测](https://arxiv.org/pdf/2110.06923.pdf)
-- 标题：[BEVDet：鸟瞰中的高性能多摄像头 3D 目标检测](https://arxiv.org/abs/2112.11790)
-- 标题：[DETR3D：通过3D 到2D查询从多视图图像进行3D目标检测](https://arxiv.org/abs/2110.06922)
-- 标题：[BEVFusion：简单而强大的LiDAR-相机融合框架](https://arxiv.org/abs/2205.13790)
-- 标题：[将基于体素的表示与Transformer 统一用于3D目标检测](https://arxiv.org/pdf/2206.00630.pdf)
-- 标题：[基于视觉的环视3D检测的极坐标参数化](https://arxiv.org/abs/2206.10965)
 - 标题：[SRCN3D：用于自动驾驶的稀疏 R-CNN3D环视摄像头目标检测和跟踪](https://arxiv.org/abs/2206.14451)
 - 标题：[BEVDet4D：在多摄像头3D目标检测中利用时间线索](https://arxiv.org/pdf/2203.17054.pdf)
 - 标题：[BEVStereo：利用动态时间立体增强多视图3D目标检测中的深度估计](https://arxiv.org/abs/2209.10248)
@@ -69,27 +77,6 @@
 - 标题：[STS：用于多视图3D检测的环视时态立体](https://arxiv.org/abs/2208.10145)
 - 标题：[BEV-LGKD：用于BEV 3D目标检测的统一LiDAR引导知识蒸馏框架](https://arxiv.org/pdf/2212.00623.pdf)
 - 标题：[用于3D物体检测的多相机免校准BEV表示](https://arxiv.org/pdf/2210.17252.pdf)
-- 标题：[AutoAlign：用于多模态3D目标检测的像素实例特征聚合](https://www.ijcai.org/proceedings/2022/0116.pdf)
-- 标题：[Graph-DETR3D：重新思考多视图3D目标检测的重叠区域](https://github.com/zehuichen123/Graph-DETR3D)
-- 标题：[ORA3D：重叠区域感知多视图3D目标检测](https://arxiv.org/pdf/2207.00865.pdf)
-- 标题：[AutoAlignV2：用于动态多模态3D目标检测的可变形特征聚合](https://www.ecva.net/papers/eccv_2022/papers_ECCV/papers/136680616.pdf)
-- 标题：[CenterFormer：用于3D目标检测的基于中心的Transformer](https://www.ecva.net/papers/eccv_2022/papers_ECCV/papers/136980487.pdf)
-- 标题：[SpatialDETR：基于全局跨传感器注意力的多视图相机图像的鲁棒可扩展基于Transformer的3D目标检测](https://markus-enzweiler.de/downloads/publications/ECCV2022-spatial_detr.pdf)
-- 标题：[用于多视图3D目标检测的位置嵌入变换](https://www.ecva.net/papers/eccv_2022/papers_ECCV/papers/136870523.pdf)
-- 标题：[BEVDepth：获取多视图3D目标检测的可靠深度](https://arxiv.org/abs/2206.10092)
-- 标题：[PolarFormer：使用Polar Transformers进行多摄像头3D目标检测](https://arxiv.org/abs/2206.15398)
-- 标题：[多摄像头3D目标检测的简单基线](https://arxiv.org/pdf/2208.10035.pdf)
-- 标题：[通过坐标编码进行3D目标检测的交叉模态转换器](https://arxiv.org/pdf/2301.01283.pdf)
-- 标题：[Sparse4D：具有稀疏时空融合的多视图3D目标检测](https://arxiv.org/pdf/2211.10581.pdf)
-- 标题：[BEVSimDet：用于多视图3D目标检测的鸟瞰视图中的模拟多模态蒸馏](https://arxiv.org/pdf/2303.16818.pdf)
-- 标题：[BEVStereo++：通过动态时态立体进行多视图3D目标检测中的准确深度估计](https://arxiv.org/pdf/2304.04185.pdf)
-- 标题：[BSH-Det3D：使用BEV形状热图改进3D目标检测](https://arxiv.org/pdf/2303.02000.pdf)
-- 标题：[DORT：针对多摄像头3D目标检测和跟踪的循环动态对象建模](https://arxiv.org/pdf/2303.16628.pdf)
-- 标题：[用于以视觉为中心的3D目标检测的几何感知预训练](https://arxiv.org/pdf/2304.03105.pdf)
-- 标题：[探索多视图3D感知的循环长期时间融合](https://arxiv.org/pdf/2303.05970.pdf)
-- 标题：[OA-BEV：将对象感知引入多摄像头3D目标检测的鸟瞰图表示中](https://arxiv.org/pdf/2301.05711.pdf)
-- 标题：[通过历史对象预测对多视图3D目标检测器进行时间增强训练](https://arxiv.org/pdf/2304.00967.pdf)
-- 标题：[VIMI：用于基于摄像头的3D目标检测的车辆基础设施多视图中间融合](https://arxiv.org/pdf/2303.10975.pdf)
 - 标题：[Object as Query: 为任何2D对象检测器配备3D检测能力](https://arxiv.org/pdf/2301.02364.pdf)
 - 标题：[VoxelFormer：基于双视图注意力的鸟瞰特征生成，用于多视图3D目标检测](https://github.com/Lizhuoling/VoxelFormer-public)
 - 标题：[TiG-BEV：通过目标内部几何学习进行多视图BEV 3D目标检测](https://arxiv.org/pdf/2212.13979.pdf)
@@ -110,26 +97,10 @@
 - 标题：[SA-BEV：生成用于多视图3D目标检测的语义感知鸟瞰图功能](https://arxiv.org/pdf/2307.11477.pdf)
 - 标题：[预测检测：使用序列图像进行预测引导的3D目标检测](https://arxiv.org/pdf/2306.08528.pdf)
 - 标题：[DFA3D：用于2D到3D特征提升的3D可变形注意力](https://arxiv.org/pdf/2307.12972.pdf)
-- 标题：[Far3D：扩展环视3D目标检测的视野](https://arxiv.org/pdf/2308.09616.pdf)
-- 标题：[HeightFormer：无需额外数据的显式高度建模，用于鸟瞰图中仅使用相机的3D目标检测](https://arxiv.org/pdf/2307.13510.pdf)
-- 标题：[探索以对象为中心的时间建模以实现高效的多视图3D目标检测](https://arxiv.org/pdf/2303.11926.pdf)
-- 标题：[3DPPE：用于多摄像头3D目标检测变压器的3D点位置编码](https://arxiv.org/pdf/2211.14710.pdf)
-- 标题：[FB-BEV：前向后视图变换的BEV表示](https://arxiv.org/pdf/2308.02236.pdf)
-- 标题：[QD-BEV：用于多视图3D物体检测的量化感知视图引导蒸馏](https://arxiv.org/pdf/2308.10515v1.pdf)
-- 标题：[SparseBEV：多摄像头视频的高性能稀疏3D目标检测](https://arxiv.org/pdf/2308.09244v1.pdf)
-- 标题：[NeRF-Det：学习用于多视图3D目标检测的几何感知体积表示](https://arxiv.org/pdf/2307.14620.pdf)
-- 标题：[DistillBEV：通过跨模态知识蒸馏增强多摄像头3D目标检测](https://openaccess.thecvf.com/content/ICCV2023/html/Wang_DistillBEV_Boosting_Multi-Camera_3D_Object_Detection_with_Cross-Modal_Knowledge_Distillation_ICCV_2023_paper.html)
-- 标题：[BEVHeight++：迈向稳健的以视觉为中心的3D目标检测](https://arxiv.org/pdf/2309.16179.pdf)
-- 标题：[UniBEV：使用统一 BEV编码器的多模态3D目标检测，以实现针对丢失传感器模态的鲁棒性](https://arxiv.org/pdf/2309.14516.pdf)
-- 标题：[用于自动驾驶的无监督3D感知与2D视觉语言蒸馏](https://arxiv.org/pdf/2309.14491.pdf)
-- 标题：[用于多视图 3D 对象检测的像素对齐循环查询](https://browse.arxiv.org/pdf/2310.01401.pdf)
-- 标题：[CoBEVFusion：与激光雷达相机鸟瞰融合的协作感知](https://arxiv.org/pdf/2310.06008.pdf)
-- 标题：[DynamicBEV：利用动态查询和时间上下文进行3D目标检测](https://arxiv.org/pdf/2310.05989.pdf)
-- 标题：[通过透视去偏实现通用多相机3D目标检测](https://arxiv.org/pdf/2310.11346.pdf)
-- 标题：[利用以视觉为中心的多模态专业知识进行3D目标检测](https://arxiv.org/pdf/2310.15670.pdf)
-- 标题：[M&M3D：多视图3D对象的多数据集训练和高效网络](https://arxiv.org/pdf/2311.00986.pdf)
 
 ## 感知预测规划
+
+<a name="感知预测规划"></a> 
 
 ### 单目
 
@@ -151,16 +122,22 @@
 
 ## 追踪
 
+<a name="追踪"></a> 
+
 - 标题：[使用 Transformer 探索用于 3D 点云对象跟踪的 Point-BEV Fusion](https://arxiv.org/pdf/2208.05216.pdf)
 - 标题：[EarlyBird：鸟瞰多视图跟踪的早期融合](https://arxiv.org/pdf/2310.13350.pdf)
 
 ## 定位
+
+<a name="定位"></a> 
 
 - 标题：[BEV-Locator：使用多视图图像的端到端视觉语义定位网络](https://arxiv.org/pdf/2211.14927.pdf)
 - 标题：[BEV-SLAM：使用单目视觉构建全球一致的世界地图](https://cvssp.org/Personal/OscarMendez/papers/pdf/RossIROS2022.pdf)
 - 标题：[U-BEV：高度感知鸟瞰分割和基于神经图的重定位](https://arxiv.org/pdf/2310.13766.pdf)
 
 ## Occupancy预测
+
+<a name="Occupancy预测"></a> 
 
 - 标题：[占用网络：学习函数空间中的 3D 重建](https://arxiv.org/pdf/1812.03828.pdf)
 - 标题：[3D 语义场景完成：综述](https://arxiv.org/pdf/2103.07466.pdf)
@@ -185,20 +162,3 @@
 - 标题：[SSCBench：自动驾驶的大规模 3D 语义场景完成基准](https://arxiv.org/pdf/2306.09001.pdf)
 - 标题：[StereoVoxelNet：使用深度神经网络基于立体相机的 OccupancyVoxels 进行实时障碍物检测]( https://arxiv.org/pdf/2209.08459.pdf)
 - 标题：[基于视觉的 3D 语义占用预测的三视角视图](https://arxiv.org/pdf/2302.07817.pdf)
-- 标题：[VoxFormer：3D 语义占用预测的前沿基线](https://arxiv.org/pdf/2302.12251.pdf)
-- 标题：[点云预测作为 4D 占用预测的代理](https://github.com/vasgaowei/BEV-Perception/blob/main/https:/arxiv.org/pdf/2302.13130.pdf)
-- 标题：[SSCBench：自动驾驶的大规模 3D 语义场景完成基准](https://arxiv.org/pdf/2306.09001.pdf)
-- 标题：[SSC-RS：通过表示分离和 BEV 融合提升 LiDAR 语义场景完成度](https://arxiv.org/pdf/2306.15349.pdf)
-- 标题：[CVSformer：用于语义场景完成的跨视图合成变压器](https://arxiv.org/pdf/2307.07938.pdf)
-- 标题：[通过上下文实例查询交响 3D 语义场景完成](https://github.com/vasgaowei/BEV-Perception/blob/main/https:/arxiv.org/pdf/2306.15670.pdf)
-- 标题：[Occupancy-MAE：使用掩模占用自动编码器进行自监督预训练大规模 LiDAR 点云](https://arxiv.org/pdf/2206.09900.pdf)
-- 标题：[UniWorld：通过世界模型进行自动驾驶预训练](https://arxiv.org/pdf/2308.07234.pdf)
-- 标题：[PointOcc：基于点的 3D 语义占用预测的圆柱三透视视图](https://arxiv.org/pdf/2308.16896.pdf)
-- 标题：[SOGDet：语义占用引导多视图 3D目标检测](https://arxiv.org/pdf/2308.13794.pdf)
-- 标题：[OccupancyDETR：使语义场景完成像目标检测一样简单](https://arxiv.org/pdf/2308.13794.pdf)
-- 标题：[PointSSC：用于语义场景完成的协作车辆-基础设施点云基准](https://arxiv.org/pdf/2309.12708.pdf)
-- 标题：[SPOT：通过占用预测进行自动驾驶的可扩展 3D 预训练](https://arxiv.org/pdf/2309.10527.pdf)
-- 标题：[NDC-Scene：增强标准化设备坐标空间中的单目 3D 语义场景完成](https://arxiv.org/pdf/2309.14616.pdf)
-- 标题：[用于 3D 语义场景完成的各向异性卷积网络](https://arxiv.org/pdf/2004.02122.pdf)
-- 标题：[RenderOcc：具有 2D 渲染监督的以视觉为中心的 3D 占用预测](https://arxiv.org/pdf/2309.09502.pdf)
-- 标题：[基于 LiDAR的4D占用完成和预测](https://arxiv.org/pdf/2310.11239.pdf)
