--- a/paper/3D视觉工坊最新论文汇总.md
+++ b/paper/3D视觉工坊最新论文汇总.md
@@ -14,6 +14,38 @@
 
 
 
+### ICCV'23开源 | 兼具泛化性与绝对尺度的单目深度估计！
+
+- 文章：[ICCV'23开源 | 兼具泛化性与绝对尺度的单目深度估计！](https://mp.weixin.qq.com/s/wTw6o8qMhuTujiz0RdtpDA)
+- 标题：Towards Zero-Shot Scale-Aware Monocular Depth Estimation
+- 作者：Vitor Guizilini等人
+- 机构：丰田研究所 (TRI)
+- 论文：[点击下载](https://pan.baidu.com/s/1_7FGVAR3TSWnt3IvB-DlZw)
+
+### 120倍加速！PanopticNeRF-360：快速生成大量新视点全景分割图像！
+
+- 文章：[120倍加速！PanopticNeRF-360：快速生成大量新视点全景分割图像！](https://mp.weixin.qq.com/s/wTw6o8qMhuTujiz0RdtpDA)
+- 标题：PanopticNeRF-360: Panoramic 3D-to-2D Label Transfer in Urban Scenes
+- 作者：Xiao Fu, Shangzhan Zhang等人
+- 机构：浙江大学、图宾根大学等
+- 论文：[点击下载](https://pan.baidu.com/s/1sHDqYhDJLuC7RkUQSlHN4A)
+
+### IEEE2023！视觉受限室内环境的最强解决方案：基于UWB雷达的自主导航与建图
+
+- 文章：[IEEE2023！视觉受限室内环境的最强解决方案：基于UWB雷达的自主导航与建图](https://mp.weixin.qq.com/s/3HXOi-tLCCE8BawtP2EBDQ)
+- 标题：UWB Radar SLAM: an Anchorless Approach in Vision Denied Indoor Environments
+- 作者：Ran Liu、Chau Yuen、U-Xuan Tan等人
+- 机构：新加坡南洋理工大学等
+- 论文：[点击下载](https://pan.baidu.com/s/12Z6slvhHDgVdpdqL-8JwdA)
+
+### NeRF革新？PF-LRM：Transformer引领的稀疏NeRF模型—三维重建的未来
+
+- 文章：[NeRF革新？PF-LRM：Transformer引领的稀疏NeRF模型—三维重建的未来](https://mp.weixin.qq.com/s/IHJyY9s7m2bPpczlSBthrA)
+- 标题：PF-LRM: POSE-FREE LARGE RECONSTRUCTION MODEL FOR JOINT POSE AND SHAPE PREDICTION
+- 作者：Peng Wang;Hao Tan;Sai Bi等人
+- 机构：Adobe Research & HKU; Adobe Research等
+- 论文：[点击下载](https://pan.baidu.com/s/1mvKVK3Lde3Gh9aTDqTXnWw)
+
 ### 快速提取精确且可编辑的3D网格：一种基于Gaussian Splatting的方法
 
 - 文章：[快速提取精确且可编辑的3D网格：一种基于Gaussian Splatting的方法](https://mp.weixin.qq.com/s/z5Gw9hmQrZPNbZ2GjtSkwg)
