--- a/paper/3D视觉工坊最新论文汇总.md
+++ b/paper/3D视觉工坊最新论文汇总.md
@@ -8,11 +8,17 @@
 >
 > 国内最专业的**3D视觉全栈学习路线**： [www.3dcver.com](http://www.3dcver.com/) 
 >
-> 提取码、请联系**微信**：**cv3d008**
+> 若有问题、请联系**微信**：**cv3d008**
 
 
 
+### 深度学习神器DYnet++：轻松驾驭复杂自由曲面，3D测量无难度！
 
+- 文章：[深度学习神器DYnet++：轻松驾驭复杂自由曲面，3D测量无难度！](https://mp.weixin.qq.com/s/_5-nOz8wbVthUAjYJCI2DA)
+- 标题：DYnet++: A Deep Learning Based Single-Shot Phase-Measuring Deflectometry for the 3-D Measurement of Complex Free-Form Surfaces
+- 作者：Manh The Nguyen等人
+- 机构：韩国科学技术院
+- 论文：[点击下载](链接：https://pan.baidu.com/s/1uJpWQGY0y2sGMvwbei36aQ)
 
 ### ICCV'23开源 | 兼具泛化性与绝对尺度的单目深度估计！
 
