--- a/paper/基础知识.md
+++ b/paper/基础知识.md
@@ -1,60 +1,54 @@
 主要记录每天整理的计算机视觉、VSLAM、点云、三维重建、深度学习、自动驾驶等优质papers，以供与大家一起学习。
 
-#### VSLAM
+#### VSLAM（to do）
 
 1、题目：[]()   作者
 
 
 
-
-
-#### 点云
+#### 点云（to do）
 
 1、题目：[]()   作者
 
 
 
-#### 结构光
+#### 结构光（to do）
 
 1、题目：[]()   作者
 
 
 
-#### 三维重建
+#### 三维重建（to do）
 
 1、题目：[]()   作者
 
 
 
-#### 深度学习在3D视觉上的应用
+#### 深度学习在3D视觉上的应用（to do）
 
 1、题目：[]()   作者
 
 
 
-#### 图像处理
+#### 图像处理（to do）
 
 1、题目：[]()   作者
 
 
 
-#### 相机标定
+#### 相机标定（to do）
 
 1、题目：[]()   作者
 
 
 
-
-
-#### 姿态估计
+#### 姿态估计（to do）
 
 1、题目：[]()   作者
 
 
 
-
-
-#### 缺陷检测
+#### 缺陷检测（to do）
 
 1、题目：[]()   作者
 
