--- a/paper/3D视觉工坊最新论文汇总.md
+++ b/paper/3D视觉工坊最新论文汇总.md
@@ -18,7 +18,7 @@
 - 标题：DYnet++: A Deep Learning Based Single-Shot Phase-Measuring Deflectometry for the 3-D Measurement of Complex Free-Form Surfaces
 - 作者：Manh The Nguyen等人
 - 机构：韩国科学技术院
-- 论文：[点击下载](链接：https://pan.baidu.com/s/1uJpWQGY0y2sGMvwbei36aQ)
+- 论文：[点击下载](###)
 
 ### ICCV'23开源 | 兼具泛化性与绝对尺度的单目深度估计！
 
@@ -298,7 +298,7 @@
 - 标题：NeRF、Point-NeRF、NeRF-SLAM、iNeRF、NeRF-Loc、NeRF-VINS
 - 作者：Qiangeng Xu, Zexiang Xu等人
 - 机构：南加州大学、麻省理工学院等多个单位
-- 论文：[点击下载](https://pan.baidu.com/s/1DnWcFyVRJ4n630DaHVn30g)
+- 论文：[点击下载](###)
 
 ### 大盘点！22项开源NeRF SLAM顶会方案整理！（中）
 
@@ -306,7 +306,7 @@
 - 标题：NeRF、Point-NeRF、NeRF-SLAM、iNeRF、NeRF-Loc、NeRF-VINS
 - 作者：Qiangeng Xu, Zexiang Xu等人
 - 机构：南加州大学、麻省理工学院等多个单位
-- 论文：[点击下载](https://pan.baidu.com/s/1z4L0F_zQqARj_zcI4btzjw)
+- 论文：[点击下载](###)
 
 ### 大盘点！22项开源NeRF SLAM顶会方案整理！（上）
 
@@ -314,7 +314,7 @@
 - 标题：NeRF、Point-NeRF、NeRF-SLAM、iNeRF、NeRF-Loc、NeRF-VINS
 - 作者：Qiangeng Xu, Zexiang Xu等人
 - 机构：南加州大学、麻省理工学院等多个单位
-- 论文：[点击下载](https://pan.baidu.com/s/17S_CFsJtq496uy7HZxbSWg)
+- 论文：[点击下载](###)
 
 ### NeurlPS'23开源 | 大规模室外NeRF也可以实时渲染
 
