--- a/paper/3D视觉工坊最新论文汇总.md
+++ b/paper/3D视觉工坊最新论文汇总.md
@@ -290,23 +290,23 @@
 - 标题：LocoNeRF: A NeRF-based Approach for Local Structure from Motion for Precise Localization
 - 作者：Artem Nenashev, Mikhail Kurenkov, Andrei Potapov, Iana Zhura, Maksim Katerishich, and Dzmitry Tsetserukou
 - 机构：斯科尔科沃科学技术研究院（俄罗斯）
-- 论文：[点击下载](https://pan.baidu.com/s/1jteOm5DPhx5Ns7XxgJcBNg)
+- 论文：[点击下载](https://t.zsxq.com/14Svg0TQz)
 
 ### 大盘点！22项开源NeRF SLAM顶会方案整理！（下）
 
-- 文章：[大盘点！22项开源NeRF、SLAM顶会方案整理！（下）](###)
+- 文章：[大盘点！22项开源NeRF、SLAM顶会方案整理！（下）](https://mp.weixin.qq.com/s/GSCA-0rf3j7pUHPLo0E0Wg)
 - 标题：NeRF、Point-NeRF、NeRF-SLAM、iNeRF、NeRF-Loc、NeRF-VINS
 - 作者：Qiangeng Xu, Zexiang Xu等人
 - 机构：南加州大学、麻省理工学院等多个单位
-- 论文：[点击下载](###)
+- 论文：[点击下载](https://t.zsxq.com/14DZjvAt2)
 
 ### 大盘点！22项开源NeRF SLAM顶会方案整理！（中）
 
-- 文章：[大盘点！22项开源NeRF、SLAM顶会方案整理！（中）](###)
+- 文章：[大盘点！22项开源NeRF、SLAM顶会方案整理！（中）](https://mp.weixin.qq.com/s/NlckUuyhMrnC9zBdDDnhkA)
 - 标题：NeRF、Point-NeRF、NeRF-SLAM、iNeRF、NeRF-Loc、NeRF-VINS
 - 作者：Qiangeng Xu, Zexiang Xu等人
 - 机构：南加州大学、麻省理工学院等多个单位
-- 论文：[点击下载](###)
+- 论文：[点击下载](https://t.zsxq.com/14OR7dbKT)
 
 ### 大盘点！22项开源NeRF SLAM顶会方案整理！（上）
 
@@ -314,7 +314,7 @@
 - 标题：NeRF、Point-NeRF、NeRF-SLAM、iNeRF、NeRF-Loc、NeRF-VINS
 - 作者：Qiangeng Xu, Zexiang Xu等人
 - 机构：南加州大学、麻省理工学院等多个单位
-- 论文：[点击下载](###)
+- 论文：[点击下载](https://t.zsxq.com/14XBSLATT)
 
 ### NeurlPS'23开源 | 大规模室外NeRF也可以实时渲染
 
